--- a/features/content-visibility.yml
+++ b/features/content-visibility.yml
@@ -3,3 +3,14 @@ description: The `content-visibility` CSS property delays rendering an element, 
 spec: https://drafts.csswg.org/css-contain-2/#content-visibility
 group: css
 caniuse: css-content-visibility
+status:
+  compute_from: api.ContentVisibilityAutoStateChangeEvent
+compat_features:
+  - api.ContentVisibilityAutoStateChangeEvent
+  - api.ContentVisibilityAutoStateChangeEvent.ContentVisibilityAutoStateChangeEvent
+  - api.ContentVisibilityAutoStateChangeEvent.skipped
+  - api.Element.contentvisibilityautostatechange_event
+  - css.properties.content-visibility
+  - css.properties.content-visibility.auto
+  - css.properties.content-visibility.hidden
+  - css.properties.content-visibility.visible
