Revise `<input>` type descriptions

--- a/features/input-checkbox.yml
+++ b/features/input-checkbox.yml
@@ -1,5 +1,5 @@
 name: '<input type="checkbox">'
-description: The `<input type="checkbox">` HTML element represents a checkable box.
+description: The `<input type="checkbox">` HTML element represents a tickable box with two states, checked and unchecked.
 spec: https://html.spec.whatwg.org/multipage/input.html#checkbox-state-(type=checkbox)
 group:
   - forms
