--- a/features/input-date-time.yml
+++ b/features/input-date-time.yml
@@ -1,5 +1,5 @@
 name: Date and time <input> types
-description: The `<input type="date">` and `<input type="time">` HTML elements represent date and time pickers in a form.
+description: The `<input type="date">` and `<input type="time">` HTML elements show date and time pickers.
 spec: https://html.spec.whatwg.org/multipage/input.html#date-state-(type=date)
 group:
   - forms
