--- a/features/input-image.yml
+++ b/features/input-image.yml
@@ -1,5 +1,5 @@
 name: '<input type="image">'
-description: The `<input type="image">` HTML element represents an image which can be used to submit a form.
+description: The `<input type="image">` HTML element is an image that can be used to submit a form, like the `<input type="submit">` element.
 spec: https://html.spec.whatwg.org/multipage/input.html#image-button-state-(type=image)
 group:
   - forms
