--- a/features/input-password.yml
+++ b/features/input-password.yml
@@ -1,5 +1,5 @@
 name: '<input type="password">'
-description: The `<input type="password">` HTML element represents a field for users to enter passwords while ensuring the typed characters are hidden from view, typically replaced by asterisks.
+description: The `<input type="password">` HTML element represents a field for users to enter a password. The password is hidden from view, typically replaced by dots or asterisks.
 spec: https://html.spec.whatwg.org/multipage/input.html#password-state-(type=password)
 group:
   - forms
