--- a/features/input-radio.yml
+++ b/features/input-radio.yml
@@ -1,5 +1,5 @@
 name: '<input type="radio">'
-description: The `<input type="radio">` HTML element represents a button which can be selected to the exclusion of others, or as one of multiple selections in a group.
+description: The `<input type="radio">` HTML element represents one button in a group such that only one can be chosen at a time.
 spec: https://html.spec.whatwg.org/multipage/input.html#radio-button-state-(type=radio)
 group:
   - forms
