--- a/features/input.yml
+++ b/features/input.yml
@@ -1,5 +1,5 @@
 name: <input>
-description: The `<input type="text">` HTML element allows the user to input information into a form. By default, an `<input>` element is a text input.
+description: The `<input type="text">` HTML element allows the user to enter information into a form. By default, an `<input>` element is a text input.
 spec: https://html.spec.whatwg.org/multipage/input.html#the-input-element
 group:
   - forms
