--- a/features/input-file.yml
+++ b/features/input-file.yml
@@ -1,5 +1,5 @@
 name: '<input type="file">'
-description: The `<input type="file">` HTML element represents a field used to upload a file.
+description: The `<input type="file">` HTML element shows a file picker from which users can choose a file to upload with the form.
 spec: https://html.spec.whatwg.org/multipage/input.html#file-upload-state-(type=file)
 group:
   - forms
