--- a/features/input-hidden.yml
+++ b/features/input-hidden.yml
@@ -1,5 +1,5 @@
 name: '<input type="hidden">'
-description: The `<input type="hidden">` HTML element represents a form field that is not displayed visually on the page.
+description: The `<input type="hidden">` HTML element represents a form field that is not shown visually but is still included in the form submission.
 spec: https://html.spec.whatwg.org/multipage/input.html#hidden-state-(type=hidden)
 group:
   - forms
