--- a/features/input-reset.yml
+++ b/features/input-reset.yml
@@ -1,5 +1,5 @@
 name: '<input type="reset">'
-description: The `<input type="reset">` HTML element is rendered as a button, and resets all inputs in the form to their initial values.
+description: The `<input type="reset">` HTML element represents a pushbutton that sets all form fields to their initial values.
 spec: https://html.spec.whatwg.org/multipage/input.html#reset-button-state-(type=reset)
 group:
   - forms
