--- a/features/input.yml
+++ b/features/input.yml
@@ -1,8 +1,11 @@
-draft_date: 2024-06-05
 name: <input>
-description: The `<input>` element TODO.
+description: The `<input type="text">` HTML element allows the user to input information into a form. By default, an `<input>` element is a text input.
 spec: https://html.spec.whatwg.org/multipage/input.html#the-input-element
-group: forms
+group:
+  - forms
+  - html-elements
+status:
+  compute_from: html.elements.input
 compat_features:
   - api.HTMLInputElement
   - api.HTMLInputElement.accept
@@ -10,10 +13,8 @@ compat_features:
   - api.HTMLInputElement.autocomplete
   - api.HTMLInputElement.cancel_event
   - api.HTMLInputElement.checked
-  - api.HTMLInputElement.defaultChecked
   - api.HTMLInputElement.defaultValue
   - api.HTMLInputElement.disabled
-  - api.HTMLInputElement.files
   - api.HTMLInputElement.form
   - api.HTMLInputElement.formAction
   - api.HTMLInputElement.formEnctype
@@ -21,13 +22,10 @@ compat_features:
   - api.HTMLInputElement.formNoValidate
   - api.HTMLInputElement.formTarget
   - api.HTMLInputElement.height
-  - api.HTMLInputElement.indeterminate
   - api.HTMLInputElement.invalid_event
   - api.HTMLInputElement.labels
   - api.HTMLInputElement.list
-  - api.HTMLInputElement.max
   - api.HTMLInputElement.maxLength
-  - api.HTMLInputElement.min
   - api.HTMLInputElement.minLength
   - api.HTMLInputElement.multiple
   - api.HTMLInputElement.name
@@ -43,14 +41,8 @@ compat_features:
   - api.HTMLInputElement.setRangeText
   - api.HTMLInputElement.setSelectionRange
   - api.HTMLInputElement.size
-  - api.HTMLInputElement.src
-  - api.HTMLInputElement.step
-  - api.HTMLInputElement.stepDown
-  - api.HTMLInputElement.stepUp
   - api.HTMLInputElement.type
   - api.HTMLInputElement.value
-  - api.HTMLInputElement.valueAsDate
-  - api.HTMLInputElement.valueAsNumber
   - api.HTMLInputElement.width
   - html.elements.input
   - html.elements.input.accept
@@ -64,9 +56,7 @@ compat_features:
   - html.elements.input.formnovalidate
   - html.elements.input.formtarget
   - html.elements.input.list
-  - html.elements.input.max
   - html.elements.input.maxlength
-  - html.elements.input.min
   - html.elements.input.minlength
   - html.elements.input.multiple
   - html.elements.input.name
@@ -74,34 +64,6 @@ compat_features:
   - html.elements.input.placeholder
   - html.elements.input.readonly
   - html.elements.input.required
-  # Excluded because of a non-real value
-  # - html.elements.input.size
+  - html.elements.input.size
   - html.elements.input.src
-  - html.elements.input.step
-  - html.elements.input.type_button
-  - html.elements.input.type_checkbox
-  - html.elements.input.type_color
-  - html.elements.input.type_date
-  - html.elements.input.type_datetime-local
-  - html.elements.input.type_email
-  - html.elements.input.type_file
-  - html.elements.input.type_hidden
-  - html.elements.input.type_image
-  # Excluded because of a non-real value
-  # - html.elements.input.type_month
-  - html.elements.input.type_number
-  - html.elements.input.type_password
-  - html.elements.input.type_password.insecure_login_handling
-  - html.elements.input.type_radio
-  - html.elements.input.type_range
-  # Excluded because of a non-real value
-  # - html.elements.input.type_range.tick_marks
-  # - html.elements.input.type_range.vertical_orientation
-  - html.elements.input.type_reset
-  - html.elements.input.type_submit
-  # Excluded because of a non-real value
-  # - html.elements.input.type_tel
   - html.elements.input.type_text
-  - html.elements.input.type_time
-  - html.elements.input.type_url
-  - html.elements.input.type_week
