add stats api as feature

--- a/features/webrtc-stats.yml
+++ b/features/webrtc-stats.yml
@@ -1,8 +1,15 @@
-draft_date: 2024-09-09
-name: Identifiers for WebRTC's Statistics API
-description: TODO
+name: WebRTC Statistics API
+description: The WebRTC Statistics API gives applications access to detailed information about the status, performance, network and media for a given WebRTC connection.
 spec: https://w3c.github.io/webrtc-stats/
 compat_features:
+  - api.RTCStatsReport
+  - api.RTCStatsReport.@@iterator
+  - api.RTCStatsReport.entries
+  - api.RTCStatsReport.forEach
+  - api.RTCStatsReport.get
+  - api.RTCStatsReport.has
+  - api.RTCStatsReport.keys
+  - api.RTCStatsReport.size
   - api.RTCStatsReport.type_candidate-pair
   - api.RTCStatsReport.type_candidate-pair.availableOutgoingBitrate
   - api.RTCStatsReport.type_candidate-pair.bytesDiscardedOnSend
@@ -239,3 +246,4 @@ compat_features:
   - api.RTCStatsReport.type_transport.timestamp
   - api.RTCStatsReport.type_transport.tlsVersion
   - api.RTCStatsReport.type_transport.type
+  - api.RTCStatsReport.values
