--- a/features/webrtc-stats.yml
+++ b/features/webrtc-stats.yml
@@ -1,8 +1,10 @@
 name: WebRTC Statistics API
 description: The WebRTC Statistics API gives applications access to detailed information about the status, performance, network and media for a given WebRTC connection.
 spec: https://w3c.github.io/webrtc-stats/
+group: webrtc
 compat_features:
   - api.RTCStatsReport
+  - api.RTCStatsReport.@@iterator
   - api.RTCStatsReport.@@iterator
   - api.RTCStatsReport.entries
   - api.RTCStatsReport.forEach
