--- a/features/webrtc-stats.yml.dist
+++ b/features/webrtc-stats.yml.dist
@@ -49,6 +49,7 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.RTCStatsReport.@@iterator
+  - api.RTCStatsReport.@@iterator
   - api.RTCStatsReport.entries
   - api.RTCStatsReport.keys
   - api.RTCStatsReport.values
