--- a/features/contain.yml
+++ b/features/contain.yml
@@ -1,5 +1,5 @@
 name: contain
-description: "The `contain` CSS property sets limits to the scope of styles, layout, and paint rendering for speed and efficiency. The `contain: none` CSS declaration disables containment, the `contain: strict` CSS declaration is equivalent to `contain: size layout style paint`, and the `contain: content` CSS declaration is equivalent to `contain: layout style paint`"
+description: "The `contain` CSS property sets limits to the scope of styles, layout, and paint rendering for speed and efficiency. The `none` keyword value disables containment. The `strict` and `content` keyword values are equivalent to `contain: size layout style paint` and `contain: layout style paint` respectively."
 spec: https://drafts.csswg.org/css-contain-2/#contain-property
 group: containment
 caniuse: css-containment
