--- a/features/draft/spec/svg2.yml
+++ b/features/draft/spec/svg2.yml
@@ -1,35 +1,10 @@
-draft_date: 2024-11-04
+draft_date: 2024-11-15
 name: Scalable Vector Graphics (SVG) 2
 description: TODO
 spec: https://svgwg.org/svg2-draft/
 compat_features:
-  - api.SVGAElement.ping
-  - css.properties.color-interpolation
-  - css.properties.color-interpolation.linearGradient
-  - css.properties.color-interpolation.sRGB
-  - css.properties.cx
-  - css.properties.cy
-  - css.properties.d
-  - css.properties.marker
-  - css.properties.marker-end
-  - css.properties.marker-mid
-  - css.properties.marker-start
   - css.properties.pointer-events
   - css.properties.pointer-events.html_elements
-  - css.properties.r
-  - css.properties.rx
-  - css.properties.ry
-  - css.properties.shape-rendering
-  - css.properties.stop-color
-  - css.properties.stop-opacity
-  - css.properties.stroke
-  - css.properties.text-anchor
-  - css.properties.text-rendering
-  - css.properties.vector-effect
-  - css.properties.x
-  - css.properties.y
-  - svg.elements.a.ping
-  - svg.elements.script.type.module
 
 # The following features in the spec are already part of web-features:
 # - SVG:
@@ -37,6 +12,7 @@ compat_features:
 #   - api.SVGAElement.download
 #   - api.SVGAElement.href
 #   - api.SVGAElement.hreflang
+#   - api.SVGAElement.ping
 #   - api.SVGAElement.referrerPolicy
 #   - api.SVGAElement.rel
 #   - api.SVGAElement.relList
@@ -304,10 +280,33 @@ compat_features:
 #   - api.SVGViewElement
 #   - api.SVGViewElement.preserveAspectRatio
 #   - api.SVGViewElement.viewBox
+#   - css.properties.color-interpolation
+#   - css.properties.color-interpolation.linearGradient
+#   - css.properties.color-interpolation.sRGB
+#   - css.properties.cx
+#   - css.properties.cy
+#   - css.properties.d
+#   - css.properties.marker
+#   - css.properties.marker-end
+#   - css.properties.marker-mid
+#   - css.properties.marker-start
+#   - css.properties.r
+#   - css.properties.rx
+#   - css.properties.ry
+#   - css.properties.shape-rendering
+#   - css.properties.stop-color
+#   - css.properties.stop-opacity
+#   - css.properties.stroke
+#   - css.properties.text-anchor
+#   - css.properties.text-rendering
+#   - css.properties.vector-effect
+#   - css.properties.x
+#   - css.properties.y
 #   - svg.elements.a
 #   - svg.elements.a.download
 #   - svg.elements.a.href
 #   - svg.elements.a.hreflang
+#   - svg.elements.a.ping
 #   - svg.elements.a.referrerpolicy
 #   - svg.elements.a.referrerpolicy.no-referrer-when-downgrade
 #   - svg.elements.a.referrerpolicy.origin-when-cross-origin
@@ -421,6 +420,7 @@ compat_features:
 #   - svg.elements.script.defer
 #   - svg.elements.script.href
 #   - svg.elements.script.type
+#   - svg.elements.script.type.module
 #   - svg.elements.script.xlink_href
 #   - svg.elements.set.systemLanguage
 #   - svg.elements.stop
