--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -6,5 +6,6 @@ status:
   support:
     chrome: "131"
     chrome_android: "131"
+    edge: "131"
 compat_features:
   - css.properties.font-variant-emoji
