--- a/features/popover.yml.dist
+++ b/features/popover.yml.dist
@@ -38,11 +38,11 @@ compat_features:
   #   safari_ios: "17"
   - api.HTMLButtonElement.popoverTargetAction
   - api.HTMLButtonElement.popoverTargetElement
-  - api.HTMLElement.beforetoggle_event
+  - api.HTMLElement.beforetoggle_event.popover_elements
   - api.HTMLElement.hidePopover
   - api.HTMLElement.showPopover
   - api.HTMLElement.togglePopover
-  - api.HTMLElement.toggle_event
+  - api.HTMLElement.toggle_event.popover_elements
   - api.HTMLInputElement.popoverTargetAction
   - api.HTMLInputElement.popoverTargetElement
   - css.selectors.backdrop.popover
