--- a/features/svg.yml.dist
+++ b/features/svg.yml.dist
@@ -1548,8 +1548,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.SVGElement.nonce
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-16
+  # baseline_high_date: 2024-11-16
   # support:
   #   chrome: "78"
   #   chrome_android: "78"
