--- a/features/webhid.yml.dist
+++ b/features/webhid.yml.dist
@@ -55,6 +55,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "131"
+  #   edge: "131"
   - api.WorkerNavigator.hid
 
   # baseline: false
