--- a/features/csp.yml.dist
+++ b/features/csp.yml.dist
@@ -258,8 +258,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.Document.securitypolicyviolation_event
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-16
+  # baseline_high_date: 2024-11-16
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
