--- a/features/promise.yml
+++ b/features/promise.yml
@@ -13,3 +13,16 @@ spec:
   - https://tc39.es/ecma262/multipage/control-abstraction-objects.html#sec-promise.resolve
   - https://tc39.es/ecma262/multipage/control-abstraction-objects.html#sec-promise.prototype.then
 group: promises
+status:
+  compute_from: javascript.builtins.Promise
+compat_features:
+  - javascript.builtins.Promise
+  - javascript.builtins.Promise.@@species
+  - javascript.builtins.Promise.Promise
+  - javascript.builtins.Promise.all
+  - javascript.builtins.Promise.catch
+  - javascript.builtins.Promise.incumbent_settings_object_tracking
+  - javascript.builtins.Promise.race
+  - javascript.builtins.Promise.reject
+  - javascript.builtins.Promise.resolve
+  - javascript.builtins.Promise.then
