--- a/features/promise.yml.dist
+++ b/features/promise.yml.dist
@@ -14,6 +14,18 @@ status:
     safari: "8"
     safari_ios: "8"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "32"
+  #   chrome_android: "32"
+  #   edge: "12"
+  #   firefox: "29"
+  #   firefox_android: "29"
+  #   safari: "8"
+  #   safari_ios: "8"
   - javascript.builtins.Promise
   - javascript.builtins.Promise.Promise
   - javascript.builtins.Promise.all
@@ -22,3 +34,22 @@ compat_features:
   - javascript.builtins.Promise.reject
   - javascript.builtins.Promise.resolve
   - javascript.builtins.Promise.then
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "79"
+  #   firefox: "48"
+  #   firefox_android: "48"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - javascript.builtins.Promise.@@species
+
+  # baseline: false
+  # support:
+  #   firefox: "50"
+  #   firefox_android: "50"
+  - javascript.builtins.Promise.incumbent_settings_object_tracking
