--- a/features/map.yml.dist
+++ b/features/map.yml.dist
@@ -126,3 +126,16 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - javascript.builtins.Map.@@iterator
+
+  # baseline: high
+  # baseline_low_date: 2016-09-20
+  # baseline_high_date: 2019-03-20
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "13"
+  #   firefox: "41"
+  #   firefox_android: "41"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - javascript.builtins.Map.@@species
