Add a key to functions feature

--- a/features/functions.yml.dist
+++ b/features/functions.yml.dist
@@ -326,3 +326,15 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - javascript.builtins.Function.name.inferred_names
+
+  # baseline: low
+  # baseline_low_date: 2023-09-18
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  #   firefox: "54"
+  #   firefox_android: "54"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - javascript.builtins.Function.toString.toString_revision
