--- a/features/weak-references.yml
+++ b/features/weak-references.yml
@@ -15,3 +15,4 @@ compat_features:
   - javascript.builtins.WeakRef
   - javascript.builtins.WeakRef.WeakRef
   - javascript.builtins.WeakRef.deref
+  - javascript.builtins.WeakRef.symbol_as_target
