--- a/features/weak-references.yml.dist
+++ b/features/weak-references.yml.dist
@@ -42,3 +42,4 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - javascript.builtins.FinalizationRegistry.symbol_as_target
+  - javascript.builtins.WeakRef.symbol_as_target
