--- a/features/class-syntax.yml
+++ b/features/class-syntax.yml
@@ -4,3 +4,20 @@ caniuse: es6-class
 spec: https://tc39.es/ecma262/multipage/ecmascript-language-functions-and-classes.html#sec-class-definitions
 group: javascript
 snapshot: ecmascript-2015
+status:
+  compute_from: javascript.classes
+compat_features:
+  - javascript.operators.super
+  - javascript.classes
+  - javascript.classes.constructor
+  - javascript.classes.extends
+  - javascript.classes.static
+  - javascript.statements.class
+  - javascript.classes.private_class_fields
+  - javascript.classes.private_class_fields_in
+  - javascript.classes.private_class_methods
+  - javascript.classes.public_class_fields
+  - javascript.classes.static_class_fields
+  - javascript.classes.static_initialization_blocks
+  - javascript.operators.class
+  - javascript.operators.new_target
