--- a/features/array.yml
+++ b/features/array.yml
@@ -18,3 +18,22 @@ spec:
   - https://tc39.es/ecma262/multipage/ecmascript-language-expressions.html#sec-array-initializer
 snapshot: ecmascript-1
 group: arrays
+status:
+  compute_from: javascript.builtins.Array
+compat_features:
+  - javascript.builtins.Array
+  - javascript.builtins.Array.@@species
+  - javascript.builtins.Array.@@unscopables
+  - javascript.builtins.Array.Array
+  - javascript.builtins.Array.concat
+  - javascript.builtins.Array.join
+  - javascript.builtins.Array.length
+  - javascript.builtins.Array.pop
+  - javascript.builtins.Array.push
+  - javascript.builtins.Array.reverse
+  - javascript.builtins.Array.shift
+  - javascript.builtins.Array.slice
+  - javascript.builtins.Array.sort
+  - javascript.builtins.Array.toString
+  - javascript.builtins.Array.unshift
+  - javascript.grammar.array_literals
