--- a/features/window-management.yml
+++ b/features/window-management.yml
@@ -1,4 +1,4 @@
-name: Window Management
+name: Window management
 description: "The Window Management API makes it possible to build multi-screen applications by providing access to information about the screens on a device, and to place content on a specific screen."
 spec: https://w3c.github.io/window-management/
 compat_features:
