--- a/features/backdrop.yml
+++ b/features/backdrop.yml
@@ -6,4 +6,5 @@ status:
   compute_from: css.selectors.backdrop
 compat_features:
   - css.selectors.backdrop
+  - css.selectors.backdrop.dialog
   - css.selectors.backdrop.inherit_from_originating_element
