--- a/features/backdrop.yml.dist
+++ b/features/backdrop.yml.dist
@@ -28,6 +28,19 @@ compat_features:
   #   safari_ios: "15.4"
   - css.selectors.backdrop
 
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "37"
+  #   chrome_android: "37"
+  #   edge: "79"
+  #   firefox: "98"
+  #   firefox_android: "98"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - css.selectors.backdrop.dialog
+
   # baseline: low
   # baseline_low_date: 2024-03-05
   # support:
