--- a/features/dom.yml.dist
+++ b/features/dom.yml.dist
@@ -119,6 +119,7 @@ compat_features:
   - api.ProcessingInstruction.target
   - api.Text
   - api.Text.splitText
+  - api.Window.document
 
   # baseline: high
   # baseline_low_date: 2015-07-29
