--- a/features/dom.yml
+++ b/features/dom.yml
@@ -274,4 +274,5 @@ compat_features:
   - api.TreeWalker.previousSibling
   - api.TreeWalker.root
   - api.TreeWalker.whatToShow
+  - api.Window.document
   - api.XMLDocument
