--- a/features/weak-references.yml
+++ b/features/weak-references.yml
@@ -4,11 +4,15 @@ spec:
   - https://tc39.es/ecma262/multipage/managing-memory.html#sec-managing-memory
 snapshot: ecmascript-2021
 group: javascript
+status:
+  compute_from: javascript.builtins.WeakRef
 compat_features:
   - javascript.builtins.FinalizationRegistry
   - javascript.builtins.FinalizationRegistry.FinalizationRegistry
   - javascript.builtins.FinalizationRegistry.register
+  - javascript.builtins.FinalizationRegistry.symbol_as_target
   - javascript.builtins.FinalizationRegistry.unregister
   - javascript.builtins.WeakRef
   - javascript.builtins.WeakRef.WeakRef
   - javascript.builtins.WeakRef.deref
+  - javascript.builtins.WeakRef.symbol_as_target
