--- a/features/button.yml
+++ b/features/button.yml
@@ -1,5 +1,5 @@
 name: <button>
-description: The `<button>` HTML element represents a pushbutton that triggers some action, such as submitting a form or opening a dialog, styled as a labeled rectangular box by default.
+description: The `<button>` HTML element represents a button that triggers some action, such as submitting a form or opening a dialog, styled as a labeled rectangular box by default.
 spec: https://html.spec.whatwg.org/multipage/form-elements.html#the-button-element
 group:
   - forms
