--- a/features/webrtc-encoded-transform.yml.dist
+++ b/features/webrtc-encoded-transform.yml.dist
@@ -3,7 +3,11 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "117"
+    firefox_android: "117"
+    safari: "15.4"
+    safari_ios: "15.4"
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-08-29
@@ -23,6 +27,7 @@ compat_features:
   - api.RTCEncodedVideoFrame.getMetadata
   - api.RTCEncodedVideoFrame.type
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   firefox: "117"
