--- a/features/webrtc.yml
+++ b/features/webrtc.yml
@@ -4,7 +4,7 @@ spec: https://w3c.github.io/webrtc-pc/
 group: webrtc
 caniuse: rtcpeerconnection
 status:
-  compute_from: api.RTCPeerConnection
+  compute_from: api.RTCDataChannelEvent.RTCDataChannelEvent
 compat_features:
   - api.RTCCertificate
   - api.RTCCertificate.expires
