--- a/features/webrtc-stats.yml
+++ b/features/webrtc-stats.yml
@@ -1,4 +1,4 @@
-name: WebRTC Statistics API
+name: WebRTC statistics
 description: The `RTCPeerConnection.getStats()`, `RTCRtpSender.getStats()`, and `RTCRtpReceiver.getStats()` methods return detailed information about the status, performance, network and media for a given WebRTC connection.
 spec: https://w3c.github.io/webrtc-stats/
 group: webrtc
