--- a/features/hsts.yml
+++ b/features/hsts.yml
@@ -1,5 +1,5 @@
-name: HTTP Strict Transport Security (HSTS)
-description: The `Strict-Transport-Security` HTTP response header (HSTS) informs browsers that the site should only be accessed using HTTPS, and that any future attempts to access it using HTTP should automatically be converted to HTTPS.
+name: HTTP Strict Transport Security
+description: The `Strict-Transport-Security` HTTP response header informs browsers that the site should only be accessed using HTTPS, and that any future attempts to access it using HTTP should automatically be converted to HTTPS. Also known as HSTS.
 spec: https://www.rfc-editor.org/rfc/rfc6797
 group: security
 compat_features:
