--- a/features/fencedframe.yml
+++ b/features/fencedframe.yml
@@ -1,5 +1,5 @@
 name: <fencedframe>
-description: The `<fencedframe>` element embeds content in a more secure and privacy-preserving way compared to `<iframe>` elements.
+description: The `<fencedframe>` element embeds another HTML page into the current page in a more secure and privacy-preserving way than `<iframe>` elements.
 spec: https://wicg.github.io/fenced-frame/
 compat_features:
   - api.Fence
