--- a/features/time-relative-selectors.yml
+++ b/features/time-relative-selectors.yml
@@ -1,5 +1,5 @@
-name: Time-dimensional pseudo-selectors
-description: The `:future` and `:past` CSS pseudo-selectors style upcoming or prior elements during media playback.
+name: Time-relative pseudo-selectors
+description: The `:future` and `:past` CSS pseudo-classes match upcoming or prior elements during media playback.
 spec: https://drafts.csswg.org/selectors-4/#time-pseudos
 group: selectors
 compat_features:
