--- a/features/mixed-content.yml
+++ b/features/mixed-content.yml
@@ -1,7 +1,9 @@
-draft_date: 2024-09-09
-name: Mixed Content
-description: TODO
+name: Mixed content handling
+description: When a document is loaded over HTTPS, browsers ensure that none of the document's resources are loaded over an insecure protocol. Instead, resources that the document attempts to load over an insecure protocol are either loaded over HTTPS or are blocked.
 spec: https://w3c.github.io/webappsec-mixed-content/
+group: security
+status:
+  compute_from: http.mixed-content
 compat_features:
   - http.mixed-content
   - http.mixed-content.allow_file_urls
