sync description with zstd

--- a/features/brotli.yml
+++ b/features/brotli.yml
@@ -1,5 +1,5 @@
 name: Brotli compression
-description: Brotli is a lossless data compression algorithm. It provides better compression than gzip.
+description: Brotli is a lossless data compression algorithm. When used as a content encoding, it often provides better compression than gzip.
 spec: https://www.rfc-editor.org/rfc/rfc7932
 caniuse: brotli
 compat_features:
