--- a/features/window.yml
+++ b/features/window.yml
@@ -18,6 +18,10 @@ compat_features:
   - api.Window.load_event
   - api.Window.name
   - api.Window.open
+  - api.Window.open.features_parameter_attributionsrc
+  - api.Window.open.features_parameter_popup
+  - api.Window.open.once_per_event
+  - api.Window.open.relative-multi-screen
   - api.Window.opener
   - api.Window.parent
   - api.Window.self
