--- a/features/requestidlecallback.yml
+++ b/features/requestidlecallback.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
 name: requestIdleCallback() Cooperative Scheduling of Background Tasks
-description: TODO
+description: "The `requestIdleCallback()` API queues JavaScript to be executed in idle browser time, either at the end of a frame or when the user is inactive."
 spec: https://w3c.github.io/requestidlecallback/
+caniuse: requestidlecallback
 compat_features:
   - api.IdleDeadline
   - api.IdleDeadline.didTimeout
