--- a/features/requestidlecallback.yml
+++ b/features/requestidlecallback.yml
@@ -1,4 +1,4 @@
-name: requestIdleCallback() Cooperative Scheduling of Background Tasks
+name: requestIdleCallback()
 description: "The `requestIdleCallback()` API queues JavaScript to be executed in idle browser time, either at the end of a frame or when the user is inactive."
 spec: https://w3c.github.io/requestidlecallback/
 caniuse: requestidlecallback
