--- a/features/push.yml.dist
+++ b/features/push.yml.dist
@@ -5,14 +5,27 @@ status:
   baseline: low
   baseline_low_date: 2023-03-27
   support:
-    chrome: "50"
-    chrome_android: "50"
+    chrome: "42"
+    chrome_android: "42"
     edge: "17"
     firefox: "44"
     firefox_android: "48"
     safari: "16"
     safari_ios: "16.4"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
+  # support:
+  #   chrome: "40"
+  #   chrome_android: "40"
+  #   edge: "17"
+  #   firefox: "44"
+  #   firefox_android: "44"
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.ServiceWorkerRegistration
+
   # baseline: low
   # baseline_low_date: 2023-03-27
   # support:
@@ -26,6 +39,7 @@ compat_features:
   - api.ServiceWorkerGlobalScope.push_event
   - api.ServiceWorkerRegistration.pushManager
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: low
   # baseline_low_date: 2023-03-27
   # support:
@@ -40,6 +54,7 @@ compat_features:
   - api.PushEvent.PushEvent
   - api.PushManager
   - api.PushManager.getSubscription
+  - api.PushManager.subscribe
   - api.PushSubscription
   - api.PushSubscription.endpoint
   - api.PushSubscription.getKey
@@ -69,7 +84,6 @@ compat_features:
   #   safari_ios: "16.4"
   - api.PushManager.permissionState
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: low
   # baseline_low_date: 2023-03-27
   # support:
@@ -86,3 +100,74 @@ compat_features:
   - api.PushMessageData.blob
   - api.PushMessageData.json
   - api.PushMessageData.text
+
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "54"
+  #   chrome_android: "54"
+  #   edge: "17"
+  #   firefox: "44"
+  #   firefox_android: "48"
+  #   safari: "16"
+  #   safari_ios: "16.4"
+  - api.PushSubscription.options
+  - api.PushSubscriptionOptions
+  - api.PushSubscriptionOptions.applicationServerKey
+
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "17"
+  #   firefox: "96"
+  #   firefox_android: "96"
+  #   safari: "16"
+  #   safari_ios: "16.4"
+  - api.PushSubscription.expirationTime
+
+  # baseline: false
+  # support:
+  #   chrome: "54"
+  #   chrome_android: "54"
+  #   edge: "17"
+  #   safari: "16"
+  #   safari_ios: "16.4"
+  - api.PushSubscriptionOptions.userVisibleOnly
+
+  # baseline: false
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "17"
+  #   safari: "16"
+  #   safari_ios: "16.4"
+  - api.PushManager.supportedContentEncodings_static
+
+  # baseline: false
+  # support:
+  #   firefox: "128"
+  #   firefox_android: "128"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.PushMessageData.bytes
+
+  # baseline: false
+  # support:
+  #   safari: "16"
+  #   safari_ios: "16.4"
+  - api.PushSubscriptionChangeEvent
+  - api.PushSubscriptionChangeEvent.newSubscription
+  - api.PushSubscriptionChangeEvent.oldSubscription
+
+  # baseline: false
+  # support:
+  #   safari: "16.1"
+  #   safari_ios: "16.4"
+  - api.PushSubscriptionChangeEvent.PushSubscriptionChangeEvent
+
+  # baseline: false
+  # support:
+  #   safari: "16"
+  - api.ServiceWorkerGlobalScope.pushsubscriptionchange_event
