--- a/features/push.yml.dist
+++ b/features/push.yml.dist
@@ -127,6 +127,18 @@ compat_features:
   #   safari_ios: "16.4"
   - api.PushSubscription.expirationTime
 
+  # baseline: low
+  # baseline_low_date: 2023-05-18
+  # support:
+  #   chrome: "43"
+  #   chrome_android: "43"
+  #   edge: "79"
+  #   firefox: "46"
+  #   firefox_android: "46"
+  #   safari: "16.5"
+  #   safari_ios: "16.5"
+  - api.Permissions.permission_push
+
   # baseline: false
   # support:
   #   chrome: "54"
