--- a/features/alerts.yml
+++ b/features/alerts.yml
@@ -1,5 +1,5 @@
 name: Alerts
-description: "The `window.alert`, `window.confirm` and `window.prompt` APIs open modal dialogs for notifying the user, asking for confirmation, or entering text."
+description: "The `window.alert()`, `window.confirm()`, and `window.prompt()` methods open modal dialogs for notifying the user, asking for confirmation, or entering text."
 spec: https://html.spec.whatwg.org/multipage/timers-and-user-prompts.html#user-prompts
 compat_features:
   - api.Window.alert
