--- a/features/clear-site-data.yml
+++ b/features/clear-site-data.yml
@@ -1,5 +1,5 @@
 name: Clearing site data
-description: The `Clear-Site-Data header` deletes browsing data (cookies, storage, cache) associated with the requesting website.
+description: The `Clear-Site-Data` header deletes browsing data (such as cookies, storage, or cache) associated with the requesting website.
 spec: https://w3c.github.io/webappsec-clear-site-data/
 compat_features:
   - http.headers.Clear-Site-Data
