--- a/features/clear-site-data.yml
+++ b/features/clear-site-data.yml
@@ -1,6 +1,8 @@
 name: Clearing site data
 description: The `Clear-Site-Data` header deletes browsing data (such as cookies, storage, or cache) associated with the requesting website.
 spec: https://w3c.github.io/webappsec-clear-site-data/
+status:
+  compute_from: http.headers.Clear-Site-Data.wildcard
 compat_features:
   - http.headers.Clear-Site-Data
   - http.headers.Clear-Site-Data.cache
