--- a/features/webrtc-encoded-transform.yml
+++ b/features/webrtc-encoded-transform.yml
@@ -2,3 +2,30 @@ name: WebRTC encoded transform
 description: The WebRTC encoded transform API allows you to modify audio and video streams in WebRTC connections. For example, it can be used for visual effects or custom codecs.
 spec: https://w3c.github.io/webrtc-encoded-transform/
 group: webrtc
+status:
+  compute_from:
+    - api.RTCRtpReceiver.transform
+    - api.RTCRtpSender.transform
+compat_features:
+  - api.DedicatedWorkerGlobalScope.rtctransform_event
+  - api.RTCEncodedAudioFrame
+  - api.RTCEncodedAudioFrame.RTCEncodedAudioFrame
+  - api.RTCEncodedAudioFrame.data
+  - api.RTCEncodedAudioFrame.getMetadata
+  - api.RTCEncodedVideoFrame
+  - api.RTCEncodedVideoFrame.RTCEncodedVideoFrame
+  - api.RTCEncodedVideoFrame.data
+  - api.RTCEncodedVideoFrame.getMetadata
+  - api.RTCEncodedVideoFrame.type
+  - api.RTCRtpReceiver.transform
+  - api.RTCRtpScriptTransform
+  - api.RTCRtpScriptTransform.RTCRtpScriptTransform
+  - api.RTCRtpScriptTransformer
+  - api.RTCRtpScriptTransformer.generateKeyFrame
+  - api.RTCRtpScriptTransformer.options
+  - api.RTCRtpScriptTransformer.readable
+  - api.RTCRtpScriptTransformer.sendKeyFrameRequest
+  - api.RTCRtpScriptTransformer.writable
+  - api.RTCRtpSender.transform
+  - api.RTCTransformEvent
+  - api.RTCTransformEvent.transformer
