--- a/features/webrtc-encoded-transform.yml.dist
+++ b/features/webrtc-encoded-transform.yml.dist
@@ -47,3 +47,11 @@ compat_features:
   - api.RTCRtpSender.transform
   - api.RTCTransformEvent
   - api.RTCTransformEvent.transformer
+
+  # baseline: false
+  # support:
+  #   chrome: "127"
+  #   chrome_android: "127"
+  #   edge: "127"
+  - api.RTCEncodedAudioFrame.RTCEncodedAudioFrame
+  - api.RTCEncodedVideoFrame.RTCEncodedVideoFrame
