--- a/features/input-submit.yml
+++ b/features/input-submit.yml
@@ -1,5 +1,5 @@
 name: '<input type="submit">'
-description: The `<input type="submit">` HTML element sends the data from its associated `<form>` to a server.
+description: The `<input type="submit">` HTML element represents a button that triggers an action on its associated `<form>`, such as sending the form data to a server.
 spec: https://html.spec.whatwg.org/multipage/input.html#submit-button-state-(type=submit)
 group:
   - forms
