Add touch events, more DOM keys

--- a/features/aborting.yml
+++ b/features/aborting.yml
@@ -8,6 +8,7 @@ compat_features:
   - api.AbortController
   - api.AbortController.AbortController
   - api.AbortController.abort
+  - api.AbortController.abort.reason_parameter
   - api.AbortController.signal
   - api.AbortSignal
   - api.AbortSignal.abort_event
