--- a/features/aborting.yml.dist
+++ b/features/aborting.yml.dist
@@ -70,6 +70,7 @@ compat_features:
   #   firefox_android: "97"
   #   safari: "15.4"
   #   safari_ios: "15.4"
+  - api.AbortController.abort.reason_parameter
   - api.AbortSignal.abort_static.reason_parameter
   - api.AbortSignal.reason
 
