--- a/features/dom.yml
+++ b/features/dom.yml
@@ -82,7 +82,10 @@ compat_features:
   - api.Document.createComment
   - api.Document.createDocumentFragment
   - api.Document.createElement
+  - api.Document.createElement.options_parameter
   - api.Document.createElementNS
+  - api.Document.createElementNS.options_parameter
+  - api.Document.createExpression
   - api.Document.createNodeIterator
   - api.Document.createProcessingInstruction
   - api.Document.createTextNode
@@ -95,6 +98,7 @@ compat_features:
   - api.Document.documentElement
   - api.Document.documentURI
   - api.Document.embeds
+  - api.Document.featurePolicy
   - api.Document.firstElementChild
   - api.Document.forms
   - api.Document.getElementById
