--- a/features/dom.yml.dist
+++ b/features/dom.yml.dist
@@ -169,6 +169,7 @@ compat_features:
   - api.Comment
   - api.Document.adoptNode
   - api.Document.characterSet
+  - api.Document.createExpression
   - api.Document.createNodeIterator
   - api.DocumentFragment
   - api.DocumentType
@@ -1186,3 +1187,20 @@ compat_features:
   #   safari: "1.3"
   #   safari_ios: "1"
   - api.HTMLElement.outerText
+
+  # baseline: false
+  # support:
+  #   chrome: "56"
+  #   chrome_android: "56"
+  #   edge: "79"
+  #   firefox: "50"
+  #   firefox_android: "50"
+  - api.Document.createElement.options_parameter
+  - api.Document.createElementNS.options_parameter
+
+  # baseline: false
+  # support:
+  #   chrome: "74"
+  #   chrome_android: "74"
+  #   edge: "79"
+  - api.Document.featurePolicy
