--- a/features/touch-events.yml
+++ b/features/touch-events.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
 name: Touch Events
-description: TODO
+description: Touch Events interpret finger or stylus activity on touch screens or trackpads. These DOM events are similar to mousedown, mousemove.
 spec: https://w3c.github.io/touch-events/
+caniuse: touch
 compat_features:
   - api.Element.touchcancel_event
   - api.Element.touchend_event
