--- a/features/touch-events.yml
+++ b/features/touch-events.yml
@@ -1,4 +1,4 @@
-name: Touch Events
+name: Touch events
 description: Touch Events interpret finger or stylus activity on touch screens or trackpads. These DOM events are similar to mousedown, mousemove.
 spec: https://w3c.github.io/touch-events/
 caniuse: touch
