Add key to `selection-api`
Closes https://github.com/web-platform-dx/web-features/pull/1380

Co-authored-by: Adriana Jara <32825533+tropicadri@users.noreply.github.com>

--- a/features/selection-api.yml
+++ b/features/selection-api.yml
@@ -27,6 +27,7 @@ compat_features:
   - api.Range.commonAncestorContainer
   - api.Range.compareBoundaryPoints
   - api.Range.comparePoint
+  - api.Range.createContextualFragment
   - api.Range.deleteContents
   - api.Range.detach
   - api.Range.endContainer
