--- a/features/selection-api.yml.dist
+++ b/features/selection-api.yml.dist
@@ -33,6 +33,7 @@ compat_features:
   - api.Range.collapsed
   - api.Range.commonAncestorContainer
   - api.Range.compareBoundaryPoints
+  - api.Range.createContextualFragment
   - api.Range.deleteContents
   - api.Range.endContainer
   - api.Range.endOffset
