--- a/features/font-variant-emoji.yml
+++ b/features/font-variant-emoji.yml
@@ -4,3 +4,7 @@ spec: https://drafts.csswg.org/css-fonts-4/#font-variant-emoji-prop
 group: font-features
 compat_features:
   - css.properties.font-variant-emoji
+  - css.properties.font-variant-emoji.emoji
+  - css.properties.font-variant-emoji.normal
+  - css.properties.font-variant-emoji.text
+  - css.properties.font-variant-emoji.unicode
