--- a/features/flexbox.yml
+++ b/features/flexbox.yml
@@ -63,7 +63,10 @@ compat_features:
   - css.properties.justify-items
   - css.properties.justify-items.flex_context
   - css.properties.order
+  - css.properties.place-content
   - css.properties.place-content.flex_context
+  - css.properties.place-items
   - css.properties.place-items.flex_context
+  - css.properties.place-self
   - css.properties.place-self.flex_context
   - css.properties.position.absolutely_positioned_flex_children
