--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -138,6 +138,7 @@ compat_features:
   #   firefox_android: "45"
   #   safari: "9"
   #   safari_ios: "9"
+  - css.properties.place-content
   - css.properties.place-content.flex_context
 
   # baseline: high
@@ -151,7 +152,9 @@ compat_features:
   #   firefox_android: "45"
   #   safari: "11"
   #   safari_ios: "11"
+  - css.properties.place-items
   - css.properties.place-items.flex_context
+  - css.properties.place-self
   - css.properties.place-self.flex_context
 
   # baseline: high
